// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthGenesisVault can deposit through receive fallback function 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 76519,
}
`;

exports[`EthGenesisVault migrate calls action hook 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 235033,
}
`;

exports[`EthGenesisVault migrate migrates from rewardEthToken 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 230155,
}
`;

exports[`EthGenesisVault pulls assets on claim exited assets 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 62333,
}
`;

exports[`EthGenesisVault pulls withdrawals on multiple validators registration 1`] = `
Object {
  "calldataByteLength": 3748,
  "gasUsed": 652789,
}
`;

exports[`EthGenesisVault pulls withdrawals on single validator registration 1`] = `
Object {
  "calldataByteLength": 1188,
  "gasUsed": 312952,
}
`;

exports[`EthGenesisVault update state deducts rewards on first state update 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 155054,
}
`;

exports[`EthGenesisVault update state skips updating legacy with zero total assets 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 150647,
}
`;

exports[`EthGenesisVault update state splits penalty between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 105679,
}
`;

exports[`EthGenesisVault update state splits reward between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 172166,
}
`;
